--- a/PROJECTHUB ENTERPRISE/appsettings.json
+++ b/PROJECTHUB ENTERPRISE/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=ProjectHub_DB;Username=postgres;Password=Tuan@1234"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=ProjectHub_DB;Username=postgres;Password=Tuan1234"
   },
   "Cloudinary": {
     "CloudName": "dkimznyid",
